Inline McItem by default.

--- a/docs/blocks/machines/machines.mdx
+++ b/docs/blocks/machines/machines.mdx
@@ -7,47 +7,57 @@ sidebar_position: 4
 
 Tech Reborn has several tiers of different kind of machines:
 
-- Non-Electric
-  <McItem slug="techreborn:iron_alloy_furnace"/>
-  <McItem slug="techreborn:iron_furnace"/>
-- Low
-  <McItem slug="techreborn:alloy_smelter"/>
-  <McItem slug="techreborn:auto_crafting_table"/>
-  <McItem slug="techreborn:compressor"/>
-  <McItem slug="techreborn:electric_furnace"/>
-  <McItem slug="techreborn:extractor"/>
-  <McItem slug="techreborn:greenhouse_controller"/>
-  <McItem slug="techreborn:grinder"/>
-  <McItem slug="techreborn:industrial_centrifuge"/>
-  <McItem slug="techreborn:recycler"/>
-  <McItem slug="techreborn:rolling_machine"/>
-  <McItem slug="techreborn:scrapbox-inator"/>
-  <McItem slug="techreborn:solid_canning_machine"/>
-  <McItem slug="techreborn:wire_mill"/>
-  <McItem slug="techreborn:elevator"/>
-  <McItem slug="techreborn:block_breaker"/>
-  <McItem slug="techreborn:block_placer"/>
-- Medium
-  <McItem slug="techreborn:assembling_machine"/>
-  <McItem slug="techreborn:chemical_reactor"/>
-  <McItem slug="techreborn:distillation_tower"/>
-  <McItem slug="techreborn:implosion_compressor"/>
-  <McItem slug="techreborn:industrial_blast_furnace"/>
-  <McItem slug="techreborn:industrial_electrolyzer"/>
-  <McItem slug="techreborn:industrial_grinder"/>
-  <McItem slug="techreborn:saw_mill"/>
-  <McItem slug="techreborn:vacuum_freezer"/>
-  <McItem slug="techreborn:pump"/>
-  <McItem slug="techreborn:fishing_station"/>
-  <McItem slug="techreborn:launchpad"/>
-- High
-  <McItem slug="techreborn:Charge_O_Mat"/>
-  <McItem slug="techreborn:fluid_replicator"/>
-- Extreme
-  - *There are no machines in this tier. Only generators, transformers and power storage*
-- Insane
-  <McItem slug="techreborn:fusion_control_computer"/>
-  <McItem slug="techreborn:matter_fabricator"/>
+## Non-Electric
+
+- <McItem slug="techreborn:iron_alloy_furnace"/>
+- <McItem slug="techreborn:iron_furnace"/>
+
+## Low Tier
+
+- <McItem slug="techreborn:alloy_smelter"/>
+- <McItem slug="techreborn:auto_crafting_table"/>
+- <McItem slug="techreborn:compressor"/>
+- <McItem slug="techreborn:electric_furnace"/>
+- <McItem slug="techreborn:extractor"/>
+- <McItem slug="techreborn:greenhouse_controller"/>
+- <McItem slug="techreborn:grinder"/>
+- <McItem slug="techreborn:industrial_centrifuge"/>
+- <McItem slug="techreborn:recycler"/>
+- <McItem slug="techreborn:rolling_machine"/>
+- <McItem slug="techreborn:scrapbox-inator"/>
+- <McItem slug="techreborn:solid_canning_machine"/>
+- <McItem slug="techreborn:wire_mill"/>
+- <McItem slug="techreborn:elevator"/>
+- <McItem slug="techreborn:block_breaker"/>
+- <McItem slug="techreborn:block_placer"/>
+
+## Medium Tier
+
+- <McItem slug="techreborn:assembling_machine"/>
+- <McItem slug="techreborn:chemical_reactor"/>
+- <McItem slug="techreborn:distillation_tower"/>
+- <McItem slug="techreborn:implosion_compressor"/>
+- <McItem slug="techreborn:industrial_blast_furnace"/>
+- <McItem slug="techreborn:industrial_electrolyzer"/>
+- <McItem slug="techreborn:industrial_grinder"/>
+- <McItem slug="techreborn:saw_mill"/>
+- <McItem slug="techreborn:vacuum_freezer"/>
+- <McItem slug="techreborn:pump"/>
+- <McItem slug="techreborn:fishing_station"/>
+- <McItem slug="techreborn:launchpad"/>
+
+## High Tier
+
+- <McItem slug="techreborn:Charge_O_Mat"/>
+- <McItem slug="techreborn:fluid_replicator"/>
+
+## Extreme Tier
+
+  *There are no machines in this tier. Only generators, transformers and power storage*
+
+## Insane Tier
+- <McItem slug="techreborn:fusion_control_computer"/>
+- <McItem slug="techreborn:matter_fabricator"/>
 
 ## Upgrades
 
