--- a/docs/items/armor/armor.mdx
+++ b/docs/items/armor/armor.mdx
@@ -11,9 +11,9 @@ import ArmorPartial from './_armor_intro.mdx';
 
 ---
 
-- [Lithium Batpack](./lithium_batpack)
+- <McItem slug="techreborn:lithium_batpack" />
 - \<mcitem\>techreborn:lapotronic_orbpack\</mcitem\>
-- [Cloaking Device](./cloaking_device)
+- <McItem slug="techreborn:cloaking_device" />
 
 
 ## Armor sets
