--- a/docs/items/armor/cloaking_device.mdx
+++ b/docs/items/armor/cloaking_device.mdx
@@ -14,14 +14,7 @@ Usage cost is 10E/tick (200E/sec, 12KE/min and 720KE/hour accordingly). Its char
 
 ## Recipe
 
-```
-<recipe> 
-    input techreborn:chrome_ingot techreborn:iridium_alloy_plate techreborn:chrome_ingot 
-    input techreborn:iridium_alloy_plate techreborn:lapotronic_energy_orb techreborn:iridium_alloy_plate 
-    input techreborn:chrome_ingot techreborn:iridium_alloy_plate techreborn:chrome_ingot 
-    output techreborn:cloaking_device 
-</recipe>
-```
+<CraftingTable recipe=" input techreborn:chrome_ingot techreborn:iridium_alloy_plate techreborn:chrome_ingot input techreborn:iridium_alloy_plate techreborn:lapotronic_energy_orb techreborn:iridium_alloy_plate input techreborn:chrome_ingot techreborn:iridium_alloy_plate techreborn:chrome_ingot output techreborn:cloaking_device "/>
 
 ## Usage
 
