--- a/docs/items/batteries/red_cell_battery.mdx
+++ b/docs/items/batteries/red_cell_battery.mdx
@@ -5,7 +5,7 @@ title: Red Cell Battery
 
 <ItemImage file="red_cell_battery" alt="Red Cell Battery" size="200" />
 
-The **Red Cell Battery** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/battery).
+The **Red Cell Battery** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/batteries).
 
 | Tier | I/O Rate | Storage |
 | ---- | -------- | ------- |
@@ -13,14 +13,7 @@ The **Red Cell Battery** is a portable battery used to charge items. For more de
 
 ## Recipe
 
-```
-<recipe>
-    input air techreborn:insulated_copper_cable air
-    input techreborn:lead_ingot minecraft:redstone techreborn:lead_ingot
-    input techreborn:lead_ingot minecraft:redstone techreborn:lead_ingot
-    output techreborn:red_cell_battery
-</recipe>
-```
+<CraftingTable recipe=" input air techreborn:insulated_copper_cable air input techreborn:lead_ingot minecraft:redstone techreborn:lead_ingot input techreborn:lead_ingot minecraft:redstone techreborn:lead_ingot output techreborn:red_cell_battery "/>
 
 ## Usage
 
