--- a/docs/items/dusts/dusts.mdx
+++ b/docs/items/dusts/dusts.mdx
@@ -7,65 +7,65 @@ title: Dusts
 
 # Dusts
 
-Dusts are created mainly by grinding ores or another materials in the <McItem slug="techreborn:grinder" inline={true}/>
-or <McItem slug="techreborn:industrial_grinder" inline={true}/>
+Dusts are created mainly by grinding ores or another materials in the <McItem slug="techreborn:grinder"/>
+or <McItem slug="techreborn:industrial_grinder"/>
 
-<McItem slug="almandine_dust" pack="techreborn"/>
-<McItem slug="aluminium_dust" pack="techreborn"/>
-<McItem slug="amethyst_dust" pack="techreborn" overrides={{ image: true }} />
-<McItem slug="andesite_dust" pack="techreborn"/>
-<McItem slug="andradite_dust" pack="techreborn"/>
-<McItem slug="ashes" pack="techreborn"/>
-<McItem slug="basalt_dust" pack="techreborn"/>
-<McItem slug="bauxite_dust" pack="techreborn"/>
-<McItem slug="brass_dust" pack="techreborn"/>
-<McItem slug="bronze_dust" pack="techreborn"/>
-<McItem slug="calcite_dust" pack="techreborn"/>
-<McItem slug="charcoal_dust" pack="techreborn"/>
-<McItem slug="chrome_dust" pack="techreborn"/>
-<McItem slug="cinnabar_dust" pack="techreborn"/>
-<McItem slug="clay_dust" pack="techreborn"/>
-<McItem slug="coal_dust" pack="techreborn"/>
-<McItem slug="dark_ashes_dust" pack="techreborn"/>
-<McItem slug="diamond_dust" pack="techreborn"/>
-<McItem slug="diorite_dust" pack="techreborn"/>
-<McItem slug="electrum_dust" pack="techreborn"/>
-<McItem slug="emerald_dust" pack="techreborn"/>
-<McItem slug="ender_eye_dust" pack="techreborn"/>
-<McItem slug="ender_pearl_dust" pack="techreborn"/>
-<McItem slug="endstone_dust" pack="techreborn"/>
-<McItem slug="flint_dust" pack="techreborn"/>
-<McItem slug="galena_dust" pack="techreborn"/>
-<McItem slug="granite_dust" pack="techreborn"/>
-<McItem slug="grossular_dust" pack="techreborn"/>
-<McItem slug="invar_dust" pack="techreborn"/>
-<McItem slug="lazurite_dust" pack="techreborn"/>
-<McItem slug="lead_dust" pack="techreborn"/>
-<McItem slug="magnesium_dust" pack="techreborn"/>
-<McItem slug="manganese_dust" pack="techreborn"/>
-<McItem slug="marble_dust" pack="techreborn"/>
-<McItem slug="netherrack_dust" pack="techreborn"/>
-<McItem slug="nickel_dust" pack="techreborn"/>
-<McItem slug="obsidian_dust" pack="techreborn"/>
-<McItem slug="peridot_dust" pack="techreborn"/>
-<McItem slug="phosphorous_dust" pack="techreborn"/>
-<McItem slug="platinum_dust" pack="techreborn"/>
-<McItem slug="pyrite_dust" pack="techreborn"/>
-<McItem slug="pyrope_dust" pack="techreborn"/>
-<McItem slug="red_garnet_dust" pack="techreborn"/>
-<McItem slug="ruby_dust" pack="techreborn"/>
-<McItem slug="saltpeter_dust" pack="techreborn"/>
-<McItem slug="sapphire_dust" pack="techreborn"/>
-<McItem slug="saw_dust" pack="techreborn"/>
-<McItem slug="silver_dust" pack="techreborn"/>
-<McItem slug="sodalite_dust" pack="techreborn"/>
-<McItem slug="spessartine_dust" pack="techreborn"/>
-<McItem slug="sphalerite_dust" pack="techreborn"/>
-<McItem slug="steel_dust" pack="techreborn"/>
-<McItem slug="sulfur_dust" pack="techreborn"/>
-<McItem slug="tin_dust" pack="techreborn"/>
-<McItem slug="titanium_dust" pack="techreborn"/>
-<McItem slug="tungsten_dust" pack="techreborn"/>
-<McItem slug="uvarovite_dust" pack="techreborn"/>
-<McItem slug="yellow_garnet_dust" pack="techreborn"/>
-<McItem slug="zinc_dust" pack="techreborn"/>
+- <McItem slug="almandine_dust" pack="techreborn"/>
+- <McItem slug="aluminium_dust" pack="techreborn"/>
+- <McItem slug="amethyst_dust" pack="techreborn" overrides={{ image: true }} />
+- <McItem slug="andesite_dust" pack="techreborn"/>
+- <McItem slug="andradite_dust" pack="techreborn"/>
+- <McItem slug="ashes" pack="techreborn"/>
+- <McItem slug="basalt_dust" pack="techreborn"/>
+- <McItem slug="bauxite_dust" pack="techreborn"/>
+- <McItem slug="brass_dust" pack="techreborn"/>
+- <McItem slug="bronze_dust" pack="techreborn"/>
+- <McItem slug="calcite_dust" pack="techreborn"/>
+- <McItem slug="charcoal_dust" pack="techreborn"/>
+- <McItem slug="chrome_dust" pack="techreborn"/>
+- <McItem slug="cinnabar_dust" pack="techreborn"/>
+- <McItem slug="clay_dust" pack="techreborn"/>
+- <McItem slug="coal_dust" pack="techreborn"/>
+- <McItem slug="dark_ashes_dust" pack="techreborn"/>
+- <McItem slug="diamond_dust" pack="techreborn"/>
+- <McItem slug="diorite_dust" pack="techreborn"/>
+- <McItem slug="electrum_dust" pack="techreborn"/>
+- <McItem slug="emerald_dust" pack="techreborn"/>
+- <McItem slug="ender_eye_dust" pack="techreborn"/>
+- <McItem slug="ender_pearl_dust" pack="techreborn"/>
+- <McItem slug="endstone_dust" pack="techreborn"/>
+- <McItem slug="flint_dust" pack="techreborn"/>
+- <McItem slug="galena_dust" pack="techreborn"/>
+- <McItem slug="granite_dust" pack="techreborn"/>
+- <McItem slug="grossular_dust" pack="techreborn"/>
+- <McItem slug="invar_dust" pack="techreborn"/>
+- <McItem slug="lazurite_dust" pack="techreborn"/>
+- <McItem slug="lead_dust" pack="techreborn"/>
+- <McItem slug="magnesium_dust" pack="techreborn"/>
+- <McItem slug="manganese_dust" pack="techreborn"/>
+- <McItem slug="marble_dust" pack="techreborn"/>
+- <McItem slug="netherrack_dust" pack="techreborn"/>
+- <McItem slug="nickel_dust" pack="techreborn"/>
+- <McItem slug="obsidian_dust" pack="techreborn"/>
+- <McItem slug="peridot_dust" pack="techreborn"/>
+- <McItem slug="phosphorous_dust" pack="techreborn"/>
+- <McItem slug="platinum_dust" pack="techreborn"/>
+- <McItem slug="pyrite_dust" pack="techreborn"/>
+- <McItem slug="pyrope_dust" pack="techreborn"/>
+- <McItem slug="red_garnet_dust" pack="techreborn"/>
+- <McItem slug="ruby_dust" pack="techreborn"/>
+- <McItem slug="saltpeter_dust" pack="techreborn"/>
+- <McItem slug="sapphire_dust" pack="techreborn"/>
+- <McItem slug="saw_dust" pack="techreborn"/>
+- <McItem slug="silver_dust" pack="techreborn"/>
+- <McItem slug="sodalite_dust" pack="techreborn"/>
+- <McItem slug="spessartine_dust" pack="techreborn"/>
+- <McItem slug="sphalerite_dust" pack="techreborn"/>
+- <McItem slug="steel_dust" pack="techreborn"/>
+- <McItem slug="sulfur_dust" pack="techreborn"/>
+- <McItem slug="tin_dust" pack="techreborn"/>
+- <McItem slug="titanium_dust" pack="techreborn"/>
+- <McItem slug="tungsten_dust" pack="techreborn"/>
+- <McItem slug="uvarovite_dust" pack="techreborn"/>
+- <McItem slug="yellow_garnet_dust" pack="techreborn"/>
+- <McItem slug="zinc_dust" pack="techreborn"/>
