--- a/docs/items/fluids/fluids.mdx
+++ b/docs/items/fluids/fluids.mdx
@@ -11,28 +11,28 @@ title: Fluids
 
 ### List of fluids
 
-<McItem slug="empty_cell" pack="techreborn"/>
-<McItem slug="beryllium_cell" pack="techreborn"/>
-<McItem slug="calcium_cell" pack="techreborn"/>
-<McItem slug="calciumcarbonate_cell" pack="techreborn"/>
-<McItem slug="carbon_cell" pack="techreborn"/>
-<McItem slug="carbon_fiber_cell" pack="techreborn"/>
-<McItem slug="chlorite_cell" pack="techreborn"/>
-<McItem slug="compressed_air_cell" pack="techreborn"/>
-<McItem slug="diesel_cell" pack="techreborn"/>
-<McItem slug="electrolyzed_water_cell" pack="techreborn"/>
-<McItem slug="hydrogen_cell" pack="techreborn"/>
-<McItem slug="lithium_cell" pack="techreborn"/>
-<McItem slug="methane_cell" pack="techreborn"/>
-<McItem slug="mercury_cell" pack="techreborn"/>
-<McItem slug="nitrocarbon_cell" pack="techreborn"/>
-<McItem slug="nitrodiesel_cell" pack="techreborn"/>
-<McItem slug="silicon_cell" pack="techreborn"/>
-<McItem slug="sodium_cell" pack="techreborn"/>
-<McItem slug="sodiumpersulfate_cell" pack="techreborn"/>
-<McItem slug="sodium_sulfide_cell" pack="techreborn"/>
-<McItem slug="sulfur_cell" pack="techreborn"/>
-<McItem slug="sulfuric_acid_cell" pack="techreborn"/>
-<McItem slug="water_cell" pack="techreborn"/>
-<McItem slug="wolframium_cell" pack="techreborn"/>
+- <McItem slug="empty_cell" pack="techreborn"/>
+- <McItem slug="beryllium_cell" pack="techreborn"/>
+- <McItem slug="calcium_cell" pack="techreborn"/>
+- <McItem slug="calciumcarbonate_cell" pack="techreborn"/>
+- <McItem slug="carbon_cell" pack="techreborn"/>
+- <McItem slug="carbon_fiber_cell" pack="techreborn"/>
+- <McItem slug="chlorite_cell" pack="techreborn"/>
+- <McItem slug="compressed_air_cell" pack="techreborn"/>
+- <McItem slug="diesel_cell" pack="techreborn"/>
+- <McItem slug="electrolyzed_water_cell" pack="techreborn"/>
+- <McItem slug="hydrogen_cell" pack="techreborn"/>
+- <McItem slug="lithium_cell" pack="techreborn"/>
+- <McItem slug="methane_cell" pack="techreborn"/>
+- <McItem slug="mercury_cell" pack="techreborn"/>
+- <McItem slug="nitrocarbon_cell" pack="techreborn"/>
+- <McItem slug="nitrodiesel_cell" pack="techreborn"/>
+- <McItem slug="silicon_cell" pack="techreborn"/>
+- <McItem slug="sodium_cell" pack="techreborn"/>
+- <McItem slug="sodiumpersulfate_cell" pack="techreborn"/>
+- <McItem slug="sodium_sulfide_cell" pack="techreborn"/>
+- <McItem slug="sulfur_cell" pack="techreborn"/>
+- <McItem slug="sulfuric_acid_cell" pack="techreborn"/>
+- <McItem slug="water_cell" pack="techreborn"/>
+- <McItem slug="wolframium_cell" pack="techreborn"/>
 
