--- a/docs/items/gems/gems.mdx
+++ b/docs/items/gems/gems.mdx
@@ -7,8 +7,8 @@ title: Gems
 
 Gems are dropped from ore blocks upon mining and used to produce [Dusts](/docs/items/dusts). TechReborn adds several gems in addition to vanilla diamond and emerald.
 
-<McItem slug="techreborn:ruby"/>
-<McItem slug="techreborn:sapphire"/>
-<McItem slug="techreborn:peridot"/>
-<McItem slug="techreborn:red_garnet"/>
-<McItem slug="techreborn:yellow_garnet"/>
+- <McItem slug="techreborn:ruby"/>
+- <McItem slug="techreborn:sapphire"/>
+- <McItem slug="techreborn:peridot"/>
+- <McItem slug="techreborn:red_garnet"/>
+- <McItem slug="techreborn:yellow_garnet"/>
