--- a/docs/items/tools/tools.mdx
+++ b/docs/items/tools/tools.mdx
@@ -7,8 +7,8 @@ Tech Reborn provides wide variety of powered and not-powered tools for different
 
 ## Un-powered tools
 
-- Tree-tap
-- Wrench
+- <McItem slug="techreborn:treetap" />
+- <McItem slug="techreborn:wrench" />
 - Painting tool
 
 ## Powered tools
@@ -20,7 +20,7 @@ Powered tools serves as replacement for regular Minecraft tools and weapons like
 - Basic Chainsaw
 - Basic Drill
 - Basic Jackhammer
-- Electric Tree tap
+- <McItem slug="techreborn:electric_treetap" />
 
 ### Advanced Tier
 
