--- a/docs/items/armor/lithium_batpack.mdx
+++ b/docs/items/armor/lithium_batpack.mdx
@@ -11,14 +11,7 @@ A **Lithium Batpack** is a chest slot worn item which can charge powered items i
 
 ## Recipe
 
-```
-<recipe> 
-    input techreborn:lithium_ion_battery techreborn:advanced_circuit techreborn:lithium_ion_battery 
-    input techreborn:lithium_ion_battery techreborn:aluminum_plate techreborn:lithium_ion_battery 
-    input techreborn:lithium_ion_battery air techreborn:lithium_ion_battery 
-    output techreborn:lithium_batpack 
-</recipe>
-```
+<CraftingTable recipe=" input techreborn:lithium_ion_battery techreborn:advanced_circuit techreborn:lithium_ion_battery input techreborn:lithium_ion_battery techreborn:aluminum_plate techreborn:lithium_ion_battery input techreborn:lithium_ion_battery air techreborn:lithium_ion_battery output techreborn:lithium_batpack "/>
 
 ## Usage
 
