--- a/docs/items/batteries/batteries.mdx
+++ b/docs/items/batteries/batteries.mdx
@@ -5,12 +5,12 @@ sidebar_position: 3
 
 Portable batteries are used to store energy, and to power tools and armors from the inventory.
 
-<McItem slug="techreborn:red_cell_battery"/>
-<McItem slug="techreborn:lithium_ion_battery"/>
-<McItem slug="techreborn:energy_crystal"/>
-<McItem slug="techreborn:lapotron_crystal"/>
-<McItem slug="techreborn:lapotronic_energy_orb"/>
+- <McItem slug="techreborn:red_cell_battery"/>
+- <McItem slug="techreborn:lithium_ion_battery"/>
+- <McItem slug="techreborn:energy_crystal"/>
+- <McItem slug="techreborn:lapotron_crystal"/>
+- <McItem slug="techreborn:lapotronic_energy_orb"/>
 
 ## Usage Notes
 
-- Shift-right-click while holding the battery to activate it
+Shift-right-click while holding the battery to activate it
