--- a/docs/items/nuggets/nuggets.mdx
+++ b/docs/items/nuggets/nuggets.mdx
@@ -6,28 +6,28 @@ title: Nuggets
 <ItemImage file="aluminium_nugget" alt="Nuggets" size="200" />
 
 
-<McItem slug="aluminium_nugget" pack="techreborn"/> 
-<McItem slug="brass_nugget" pack="techreborn"/> 
-<McItem slug="bronze_nugget" pack="techreborn"/> 
-<McItem slug="chrome_nugget" pack="techreborn"/> 
-<McItem slug="copper_nugget" pack="techreborn"/> 
-<McItem slug="diamond_nugget" pack="techreborn"/> 
-<McItem slug="electrum_nugget" pack="techreborn"/> 
-<McItem slug="invar_nugget" pack="techreborn"/> 
-<McItem slug="iridium_nugget" pack="techreborn"/> 
-<McItem slug="iron_nugget" pack="techreborn"/> 
-<McItem slug="lead_nugget" pack="techreborn"/> 
-<McItem slug="nickel_nugget" pack="techreborn"/> 
-<McItem slug="platinum_nugget" pack="techreborn"/> 
-<McItem slug="refined_iron_nugget" pack="techreborn"/> 
-<McItem slug="silver_nugget" pack="techreborn"/> 
-<McItem slug="steel_nugget" pack="techreborn"/> 
-<McItem slug="tin_nugget" pack="techreborn"/> 
-<McItem slug="titanium_nugget" pack="techreborn"/> 
-<McItem slug="tungsten_nugget" pack="techreborn"/> 
-<McItem slug="hot_tungstensteel_nugget" pack="techreborn"/> 
-<McItem slug="tungstensteel_nugget" pack="techreborn"/> 
-<McItem slug="zinc_nugget" pack="techreborn"/> 
+- <McItem slug="aluminium_nugget" pack="techreborn"/> 
+- <McItem slug="brass_nugget" pack="techreborn"/> 
+- <McItem slug="bronze_nugget" pack="techreborn"/> 
+- <McItem slug="chrome_nugget" pack="techreborn"/> 
+- <McItem slug="copper_nugget" pack="techreborn"/> 
+- <McItem slug="diamond_nugget" pack="techreborn"/> 
+- <McItem slug="electrum_nugget" pack="techreborn"/> 
+- <McItem slug="invar_nugget" pack="techreborn"/> 
+- <McItem slug="iridium_nugget" pack="techreborn"/> 
+- <McItem slug="iron_nugget" pack="techreborn"/> 
+- <McItem slug="lead_nugget" pack="techreborn"/> 
+- <McItem slug="nickel_nugget" pack="techreborn"/> 
+- <McItem slug="platinum_nugget" pack="techreborn"/> 
+- <McItem slug="refined_iron_nugget" pack="techreborn"/> 
+- <McItem slug="silver_nugget" pack="techreborn"/> 
+- <McItem slug="steel_nugget" pack="techreborn"/> 
+- <McItem slug="tin_nugget" pack="techreborn"/> 
+- <McItem slug="titanium_nugget" pack="techreborn"/> 
+- <McItem slug="tungsten_nugget" pack="techreborn"/> 
+- <McItem slug="hot_tungstensteel_nugget" pack="techreborn"/> 
+- <McItem slug="tungstensteel_nugget" pack="techreborn"/> 
+- <McItem slug="zinc_nugget" pack="techreborn"/> 
 
 
 
