--- a/docs/items/small_piles/small_piles.mdx
+++ b/docs/items/small_piles/small_piles.mdx
@@ -7,57 +7,57 @@ title: Small Piles
 
 Small Piles are crafting ingredients and often a by product. 
 
-<McItem slug="techreborn:small_pile_of_almandine_dust"/>
-<McItem slug="techreborn:small_pile_of_andesite_dust"/>
-<McItem slug="techreborn:small_pile_of_andradite_dust"/>
-<McItem slug="techreborn:small_pile_of_ashes"/>
-<McItem slug="techreborn:small_pile_of_basalt_dust"/>
-<McItem slug="techreborn:small_pile_of_bauxite_dust"/>
-<McItem slug="techreborn:small_pile_of_calcite_dust"/>
-<McItem slug="techreborn:small_pile_of_charcoal_dust"/>
-<McItem slug="techreborn:small_pile_of_chrome_dust"/>
-<McItem slug="techreborn:small_pile_of_cinnabar_dust"/>
-<McItem slug="techreborn:small_pile_of_clay_dust"/>
-<McItem slug="techreborn:small_pile_of_coal_dust"/>
-<McItem slug="techreborn:small_pile_of_dark_ashes"/>
-<McItem slug="techreborn:small_pile_of_diamond_dust"/>
-<McItem slug="techreborn:small_pile_of_diorite_dust"/>
-<McItem slug="techreborn:small_pile_of_electrum_dust"/>
-<McItem slug="techreborn:small_pile_of_emerald_dust"/>
-<McItem slug="techreborn:small_pile_of_ender_eye_dust"/>
-<McItem slug="techreborn:small_pile_of_ender_pearl_dust"/>
-<McItem slug="techreborn:small_pile_of_endstone_dust"/>
-<McItem slug="techreborn:small_pile_of_flint_dust"/>
-<McItem slug="techreborn:small_pile_of_galena_dust"/>
-<McItem slug="techreborn:small_pile_of_glowstone_dust"/>
-<McItem slug="techreborn:small_pile_of_granite_dust"/>
-<McItem slug="techreborn:small_pile_of_grossular_dust"/>
-<McItem slug="techreborn:small_pile_of_invar_dust"/>
-<McItem slug="techreborn:small_pile_of_lazurite_dust"/>
-<McItem slug="techreborn:small_pile_of_magnesium_dust"/>
-<McItem slug="techreborn:small_pile_of_manganese_dust"/>
-<McItem slug="techreborn:small_pile_of_marble_dust"/>
-<McItem slug="techreborn:small_pile_of_netherrack_dust"/>
-<McItem slug="techreborn:small_pile_of_nickel_dust"/>
-<McItem slug="techreborn:small_pile_of_obsidian_dust"/>
-<McItem slug="techreborn:small_pile_of_peridot"/>
-<McItem slug="techreborn:small_pile_of_phosphorous_dust"/>
-<McItem slug="techreborn:small_pile_of_platinum_dust"/>
-<McItem slug="techreborn:small_pile_of_pyrite_dust"/>
-<McItem slug="techreborn:small_pile_of_pyrope_dust"/>
-<McItem slug="techreborn:small_pile_of_red_garnet_dust"/>
-<McItem slug="techreborn:small_pile_of_redstone"/>
-<McItem slug="techreborn:small_pile_of_ruby_dust"/>
-<McItem slug="techreborn:small_pile_of_saltpeter_dust"/>
-<McItem slug="techreborn:small_pile_of_sapphire_dust"/>
-<McItem slug="techreborn:small_pile_of_saw_dust"/>
-<McItem slug="techreborn:small_pile_of_sodalite_dust"/>
-<McItem slug="techreborn:small_pile_of_spessartine_dust"/>
-<McItem slug="techreborn:small_pile_of_sphalerite_dust"/>
-<McItem slug="techreborn:small_pile_of_steel_dust"/>
-<McItem slug="techreborn:small_pile_of_sulfur_dust"/>
-<McItem slug="techreborn:small_pile_of_titanium_dust"/>
-<McItem slug="techreborn:small_pile_of_tungsten_dust"/>
-<McItem slug="techreborn:small_pile_of_uvarovite_dust"/>
-<McItem slug="techreborn:small_pile_of_yellow_garnet_dust"/>
-<McItem slug="techreborn:small_pile_of_zinc_dust"/>
+- <McItem slug="techreborn:small_pile_of_almandine_dust"/>
+- <McItem slug="techreborn:small_pile_of_andesite_dust"/>
+- <McItem slug="techreborn:small_pile_of_andradite_dust"/>
+- <McItem slug="techreborn:small_pile_of_ashes"/>
+- <McItem slug="techreborn:small_pile_of_basalt_dust"/>
+- <McItem slug="techreborn:small_pile_of_bauxite_dust"/>
+- <McItem slug="techreborn:small_pile_of_calcite_dust"/>
+- <McItem slug="techreborn:small_pile_of_charcoal_dust"/>
+- <McItem slug="techreborn:small_pile_of_chrome_dust"/>
+- <McItem slug="techreborn:small_pile_of_cinnabar_dust"/>
+- <McItem slug="techreborn:small_pile_of_clay_dust"/>
+- <McItem slug="techreborn:small_pile_of_coal_dust"/>
+- <McItem slug="techreborn:small_pile_of_dark_ashes"/>
+- <McItem slug="techreborn:small_pile_of_diamond_dust"/>
+- <McItem slug="techreborn:small_pile_of_diorite_dust"/>
+- <McItem slug="techreborn:small_pile_of_electrum_dust"/>
+- <McItem slug="techreborn:small_pile_of_emerald_dust"/>
+- <McItem slug="techreborn:small_pile_of_ender_eye_dust"/>
+- <McItem slug="techreborn:small_pile_of_ender_pearl_dust"/>
+- <McItem slug="techreborn:small_pile_of_endstone_dust"/>
+- <McItem slug="techreborn:small_pile_of_flint_dust"/>
+- <McItem slug="techreborn:small_pile_of_galena_dust"/>
+- <McItem slug="techreborn:small_pile_of_glowstone_dust"/>
+- <McItem slug="techreborn:small_pile_of_granite_dust"/>
+- <McItem slug="techreborn:small_pile_of_grossular_dust"/>
+- <McItem slug="techreborn:small_pile_of_invar_dust"/>
+- <McItem slug="techreborn:small_pile_of_lazurite_dust"/>
+- <McItem slug="techreborn:small_pile_of_magnesium_dust"/>
+- <McItem slug="techreborn:small_pile_of_manganese_dust"/>
+- <McItem slug="techreborn:small_pile_of_marble_dust"/>
+- <McItem slug="techreborn:small_pile_of_netherrack_dust"/>
+- <McItem slug="techreborn:small_pile_of_nickel_dust"/>
+- <McItem slug="techreborn:small_pile_of_obsidian_dust"/>
+- <McItem slug="techreborn:small_pile_of_peridot"/>
+- <McItem slug="techreborn:small_pile_of_phosphorous_dust"/>
+- <McItem slug="techreborn:small_pile_of_platinum_dust"/>
+- <McItem slug="techreborn:small_pile_of_pyrite_dust"/>
+- <McItem slug="techreborn:small_pile_of_pyrope_dust"/>
+- <McItem slug="techreborn:small_pile_of_red_garnet_dust"/>
+- <McItem slug="techreborn:small_pile_of_redstone"/>
+- <McItem slug="techreborn:small_pile_of_ruby_dust"/>
+- <McItem slug="techreborn:small_pile_of_saltpeter_dust"/>
+- <McItem slug="techreborn:small_pile_of_sapphire_dust"/>
+- <McItem slug="techreborn:small_pile_of_saw_dust"/>
+- <McItem slug="techreborn:small_pile_of_sodalite_dust"/>
+- <McItem slug="techreborn:small_pile_of_spessartine_dust"/>
+- <McItem slug="techreborn:small_pile_of_sphalerite_dust"/>
+- <McItem slug="techreborn:small_pile_of_steel_dust"/>
+- <McItem slug="techreborn:small_pile_of_sulfur_dust"/>
+- <McItem slug="techreborn:small_pile_of_titanium_dust"/>
+- <McItem slug="techreborn:small_pile_of_tungsten_dust"/>
+- <McItem slug="techreborn:small_pile_of_uvarovite_dust"/>
+- <McItem slug="techreborn:small_pile_of_yellow_garnet_dust"/>
+- <McItem slug="techreborn:small_pile_of_zinc_dust"/>
