--- a/docs/items/parts/parts.mdx
+++ b/docs/items/parts/parts.mdx
@@ -7,19 +7,25 @@ title: Parts
 
 Parts are essential components to craft machines.
 
+- <McItem slug="techreborn:carbon_fiber" />
+- <McItem slug="techreborn:carbon_mesh" />
+- <McItem slug="techreborn:electronic_circuit"/>
+- <McItem slug="techreborn:advanced_circuit"/>
+- <McItem slug="techreborn:industrial_circuit"/>
+- <McItem slug="techreborn:sap" />
+- <McItem slug="techreborn:rubber" />
+
+
 ```
-- \<mcitem\>techreborn:carbon_fiber\</mcitem\>
-- \<mcitem\>techreborn:carbon_mesh\</mcitem\>
-- \<mcitem\>techreborn:electronic_circuit\</mcitem\>
-- \<mcitem\>techreborn:advanced_circuit\</mcitem\>
-- \<mcitem\>techreborn:industrial_circuit\</mcitem\>
-- \<mcitem\>techreborn:machine_parts\</mcitem\>
-- \<mcitem\>techreborn:basic_display\</mcitem\>
-- \<mcitem\>techreborn:digital_display\</mcitem\>
-- \<mcitem\>techreborn:data_storage_core\</mcitem\>
-- \<mcitem\>techreborn:data_storage_chip\</mcitem\>
-- \<mcitem\>techreborn:energy_flow_chip\</mcitem\>
-- \<mcitem\>techreborn:superconductor\</mcitem\>
+
+
+- <McItem slug="techreborn:machine_parts"/>
+- <McItem slug="techreborn:basic_display"/>
+- <McItem slug="techreborn:digital_display"/>
+- <McItem slug="techreborn:data_storage_core"/>
+- <McItem slug="techreborn:data_storage_chip"/>
+- <McItem slug="techreborn:energy_flow_chip"/>
+- <McItem slug="techreborn:superconductor"/>
 - ![Diamond Grinding Head](/media/mods/techreborn/diamond_grinding_head.png){width="24" query="?nolink&24"} **[Diamond Grinding Head](/items/part/diamond_grinding_head)**
 - ![Diamond Saw Blade](/media/mods/techreborn/diamond_saw_blade.png){width="24" query="?nolink&24"} **[Diamond Saw Blade](/items/part/diamond_saw_blade)**
 - ![Tungsten Grinding Head](/media/mods/techreborn/tungsten_grinding_head.png){width="24" query="?nolink&24"} **[Tungsten Grinding Head](/items/part/tungsten_grinding_head)**
@@ -41,8 +47,7 @@ Parts are essential components to craft machines.
 - ![Neutron Reflector](/media/mods/techreborn/neutron_reflector.png){width="24" query="?nolink&24"} **[Neutron Reflector](/items/part/neutron_reflector)**
 - ![Iridium Neutron Reflector](/media/mods/techreborn/iridium_neutron_reflector.png){width="24" query="?nolink&24"} **[Iridium Neutron Reflector](/items/part/iridium_neutron_reflector)**
 - ![Thick Neutron Reflector](/media/mods/techreborn/thick_neutron_reflector.png){width="24" query="?nolink&24"} **[Thick Neutron Reflector](/items/part/thick_neutron_reflector)**
-- ![Sap](/media/mods/techreborn/sap.png){width="24" query="?nolink&24"} **[Sap](/items/part/sap)**
-- ![Rubber](/media/mods/techreborn/rubber.png){width="24" query="?nolink&24"} **[Rubber](/items/part/rubber)**
+
 - ![Coolant Simple](/media/mods/techreborn/10k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Simple](/items/part/coolant_simple)**
 - ![Coolant Triple](/media/mods/techreborn/30k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Triple](/items/part/coolant_triple)**
 - ![Coolant Six](/media/mods/techreborn/60k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Six](/items/part/coolant_six)**
