More part. Add tools support to Recipe display.

--- a/docs/items/parts/carbon_fiber.mdx
+++ b/docs/items/parts/carbon_fiber.mdx
@@ -2,7 +2,7 @@
 title: Carbon Fiber
 ---
 
-<ItemImage file="" alt="Carbon Fiber" size="200" />
+<ItemImage file="carbon_fiber" alt="Carbon Fiber" size="200" />
 
 Carbon fiber is a [part](../parts) used in crafting <McItem slug="techreborn:carbon_mesh" />.
 
