brought small piles up to parity with old wiki

--- a/docs/items/small_piles/small_piles.mdx
+++ b/docs/items/small_piles/small_piles.mdx
@@ -8,17 +8,20 @@ title: Small Piles
 Small Piles are crafting ingredients and often a by product. 
 
 - <McItem slug="techreborn:small_pile_of_almandine_dust"/>
+- <McItem slug="techreborn:small_pile_of_aluminium_dust"/>
 - <McItem slug="techreborn:small_pile_of_andesite_dust"/>
 - <McItem slug="techreborn:small_pile_of_andradite_dust"/>
 - <McItem slug="techreborn:small_pile_of_ashes"/>
 - <McItem slug="techreborn:small_pile_of_basalt_dust"/>
 - <McItem slug="techreborn:small_pile_of_bauxite_dust"/>
+- <McItem slug="techreborn:small_pile_of_brass_dust"/>
 - <McItem slug="techreborn:small_pile_of_calcite_dust"/>
 - <McItem slug="techreborn:small_pile_of_charcoal_dust"/>
 - <McItem slug="techreborn:small_pile_of_chrome_dust"/>
 - <McItem slug="techreborn:small_pile_of_cinnabar_dust"/>
 - <McItem slug="techreborn:small_pile_of_clay_dust"/>
 - <McItem slug="techreborn:small_pile_of_coal_dust"/>
+- <McItem slug="techreborn:small_pile_of_copper_dust"/>
 - <McItem slug="techreborn:small_pile_of_dark_ashes"/>
 - <McItem slug="techreborn:small_pile_of_diamond_dust"/>
 - <McItem slug="techreborn:small_pile_of_diorite_dust"/>
