adding the rest of the tools and updating the index

--- a/docs/items/tools/tools.mdx
+++ b/docs/items/tools/tools.mdx
@@ -17,24 +17,24 @@ Powered tools serves as replacement for regular Minecraft tools and weapons like
 
 ### Basic Tier
 
-- Basic Chainsaw
-- Basic Drill
-- Basic Jackhammer
+- <McItem slug="techreborn:basic_chainsaw" />
+- <McItem slug="techreborn:basic_drill" />
+- <McItem slug="techreborn:basic_jackhammer" />
 - <McItem slug="techreborn:electric_treetap" />
 
 ### Advanced Tier
 
-- Advanced Chainsaw
-- Advanced Drill
-- Advanced Jackhammer
-- Rock Cutter
+- <McItem slug="techreborn:advanced_chainsaw" />
+- <McItem slug="techreborn:advanced_drill" />
+- <McItem slug="techreborn:advanced_jackhammer" />
+- <McItem slug="techreborn:rock_cutter" />
 
 ### Industrial Tier
 
-- Industrial Chainsaw
-- Industrial Drill
-- Industrial Jackhammer
-- Nanosaber
-- Omni-tool
+- <McItem slug="techreborn:industrial_chainsaw" />
+- <McItem slug="techreborn:industrial_drill" />
+- <McItem slug="techreborn:industrial_jackhammer" />
+- <McItem slug="techreborn:nanosaber" />
+- <McItem slug="techreborn:omni_tool" />
 
 There is also a creative-only Debug tools
