adding list of alloys

--- a/docs/blocks/machines/alloy_smelter.mdx
+++ b/docs/blocks/machines/alloy_smelter.mdx
@@ -16,3 +16,17 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
 ### Recipe
 
 <CraftingTable recipe="input air techreborn:electronic_circuit air input techreborn:electric_furnace techreborn:iron_alloy_furnace techreborn:electric_furnace input air air air output techreborn:alloy_smelter"/>
+
+### List of alloys
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+3x <McItem slug="minecraft:copper_ingot" inline={true}/> + <McItem slug="techreborn:zinc_ingot" inline={true}/> &rarr; 4x <McItem slug="techreborn:brass_ingot" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+3x <McItem slug="minecraft:copper_ingot" inline={true}/> + <McItem slug="techreborn:tin_ingot" inline={true}/> &rarr; 4x <McItem slug="techreborn:bronze_ingot" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+<McItem slug="minecraft:gold_ingot" inline={true}/> + <McItem slug="techreborn:silver_ingot" inline={true}/> &rarr; 2x <McItem slug="techreborn:electrum_ingot" inline={true}/>
+
+<McItem slug="techreborn:alloy_smelter" inline={true}/> recipe:  
+2x <McItem slug="minecraft:iron_ingot" inline={true}/> + <McItem slug="techreborn:nickel_ingot" inline={true}/> &rarr; 3x <McItem slug="techreborn:invar_ingot" inline={true}/>
