allowing for title overrides

--- a/docs/blocks/transformers/transformers.mdx
+++ b/docs/blocks/transformers/transformers.mdx
@@ -8,10 +8,10 @@ sidebar_position: 3
 
 Transformers are used to convert energy between tiers. For an explanation of how transformers interact with power, read [general information about energy](/energy/).
 
-- <McItem slug="techreborn:lv_transformer"/>
-- <McItem slug="techreborn:mv_transformer"/>
-- <McItem slug="techreborn:hv_transformer"/>
-- <McItem slug="techreborn:ev_transformer"/>
+- <McItem slug="techreborn:lv_transformer" overrides={{name:"LV Transformer"}}/>
+- <McItem slug="techreborn:mv_transformer" overrides={{name:"MV Transformer"}}/>
+- <McItem slug="techreborn:hv_transformer" overrides={{name:"HV Transformer"}}/>
+- <McItem slug="techreborn:ev_transformer" overrides={{name:"EV Transformer"}}/>
 
 ### Usage Notes
 
