--- a/docs/blocks/machines/elevator.mdx
+++ b/docs/blocks/machines/elevator.mdx
@@ -12,12 +12,21 @@ By default, the elevator can pass through other blocks and can be adjusted throu
 
 The elevator block needs two blocks of space above it to be considered valid.
 
+## Recipe
+
+<CraftingTable recipe="input techreborn:ender_pearl_dust techreborn:ender_pearl_dust techreborn:ender_pearl_dust input techreborn:yellow_garnet_plate techreborn:basic_machine_frame techreborn:yellow_garnet_plate input techreborn:zinc_plate techreborn:electronic_circuit techreborn:zinc_plate output techreborn:elevator" />
+
+
 ## Usage
 
 Press the **Space** to find the elevator block above and transfer.
 
 Press the **Shift** key to find the elevator block below and transfer.
 
-## Recipe
+:::warning
 
-<CraftingTable recipe="input techreborn:ender_pearl_dust techreborn:ender_pearl_dust techreborn:ender_pearl_dust input techreborn:yellow_garnet_plate techreborn:basic_machine_frame techreborn:yellow_garnet_plate input techreborn:zinc_plate techreborn:electronic_circuit techreborn:zinc_plate output techreborn:elevator" />
+There is a known conflict with other mods if they mess with player movement. It should be fixed in recent Tech Reborn versions. 
+
+Please, check this [issue](https://github.com/TechReborn/TechReborn/issues/3207) for in-depth details.
+
+:::
