--- a/docs/blocks/machines/fluid_replicator.mdx
+++ b/docs/blocks/machines/fluid_replicator.mdx
@@ -4,7 +4,8 @@ title: Fluid Replicator
 
 <ItemImage file="fluid_replicator" alt="Fluid Replicator" size="200" />
 
-The **Fluid Replicator** is an advanced machine capable of replicating fluid placed inside the hollow of a multiblock structure using energy and <McItem slug="techreborn:UU-Matter" inline={true}/>. The **Fluid Replicator** is a high-tier machine with 1024 FE input rate and has an internal buffer of 1.6M FE.
+The **Fluid Replicator** is an advanced machine capable of replicating fluid placed inside the hollow of a multiblock structure using energy and <McItem slug="techreborn:uu-matter" />. 
+The **Fluid Replicator** is a high-tier machine with 1024 FE input rate and has an internal buffer of 1.6M FE.
 
 ## Recipe
 
@@ -14,7 +15,7 @@ The **Fluid Replicator** is an advanced machine capable of replicating fluid pla
 
 The **Fluid Replicator** requires a 3×3×1 multiblock with a hollow center.
 
-- **First layer**: 8x <McItem slug="techreborn:reinforced_machine_casing" inline={true}/> (leave the center block empty)
+- **First layer**: 8x <McItem slug="techreborn:advanced_machine_casing" /> (leave the center block empty)
 - Attach the machine controller to the multiblock on the same level.
 
 <img src="/img/blocks/fluid_replicator.png" alt="Fluid Replicator" />
@@ -23,4 +24,4 @@ The **Fluid Replicator** requires a 3×3×1 multiblock with a hollow center.
 
 Put the fluid to replicate inside the hollow in the multiblock.
 
-Provide energy and <McItem slug="techreborn:UU-Matter" inline={true}/> to begin replication. You can use **buckets**, **cells**, or **pipes** to extract the replicated fluid from the internal tank.
+Provide energy and <McItem slug="techreborn:uu-matter" /> to begin replication. You can use **buckets**, **cells**, or **pipes** to extract the replicated fluid from the internal tank.
