More fixes for machines.

--- a/docs/blocks/machines/greenhouse_controller.mdx
+++ b/docs/blocks/machines/greenhouse_controller.mdx
@@ -18,5 +18,17 @@ title: Greenhouse Controller
 
 ### Usage
 
-Place the **Greenhouse Controller** on the ground, provide energy and put some crops behind it. Standard Minecraft requirements apply to crops, like watered and tilled dirt for wheat or nearby water for sugar cane. Most crops grow from bottom to top with the exception of Cave Vines. Thus, in order to gather Glow Berries you will need to wait until the vine
+Place the **Greenhouse Controller** on the ground, provide energy and put some crops behind it. 
+Standard Minecraft requirements apply to crops, like watered and tilled dirt for wheat or nearby water for sugar cane. 
+Most crops grow from bottom to top with the exception of Cave Vines. 
+Thus, in order to gather Glow Berries you will need to wait until the vine hit the ground.
+
+
+Powered lamps above crops will speed-up grow.
+
+
+Besides Minecraft crops **Greenhouse Controller** able to gather <McItem slug="techreborn:sap" /> from Rubber trees.
+
+![greenhouse_controller](/img/blocks/greenhouse_controller.png)
+
 
