--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -6,11 +6,16 @@ title: Grinder
 
 # Grinder
 
-The **Grinder** is a machine used to turn ores and other materials into dusts. This is especially useful for ores because it will double ingot production from a single piece of ore.
+The **Grinder** is a machine used to turn ores and other materials into dusts. It will not allow you to double ingot production from Raw Ores. 
+Please, use <McItem slug="techreborn:rock_cutter" /> to get Ore Blocks and grind them in **Grinder**.
+
+Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot production in future using <McItem slug="techreborn:industrial_grinder" />.
+
 
 | Tier | Input   | Power Draw | Storage |
 |------|---------|------------|---------|
 | Low  | 32 E/t  | 2 E/t      | 1 kE    |
+
 
 ## Recipe
 
@@ -28,12 +33,18 @@ Main usage of **Grinder** is to grind materials.
 | 1x <McItem slug="minecraft:cobblestone"/> | 1x <McItem slug="minecraft:gravel"/> |
 | 1x <McItem slug="minecraft:gravel"/> | 1x <McItem slug="minecraft:sand"/> |
 | 1x <McItem slug="minecraft:netherrack"/> | 1x <McItem slug="techreborn:netherrack_dust"/> |
-| 1x <McItem slug="minecraft:coal_ore"/> | 2x <McItem slug="techreborn:coal_dust"/> |
+| 1x <McItem slug="minecraft:coal_ore"/> | 2x <McItem slug="minecraft:coal" /> |
 | 1x <McItem slug="minecraft:diamond_ore"/> | 1x <McItem slug="minecraft:diamond"/> |
 | 1x <McItem slug="minecraft:redstone_ore"/> | 8x <McItem slug="minecraft:redstone"/> |
 | 1x <McItem slug="minecraft:emerald_ore"/> | 1x <McItem slug="minecraft:emerald"/> |
 | 1x <McItem slug="minecraft:lapis_lazuli_ore"/> | 10x <McItem slug="minecraft:lapis_lazuli"/> |
+| 1x <McItem slug="minecraft:iron_ore"/> | 2x <McItem slug="minecraft:raw_iron"/> |
+| 1x <McItem slug="minecraft:gold_ore"/> | 2x <McItem slug="minecraft:raw_gold"/> |
 | 1x <McItem slug="techreborn:bauxite_ore"/> | 2x <McItem slug="techreborn:bauxite_dust"/> |
+| 1x <McItem slug="techreborn:galena_ore"/> | 2x <McItem slug="techreborn:galena_dust"/> |
+| 1x <McItem slug="techreborn:lead_ore"/> | 2x <McItem slug="techreborn:raw_lead"/> |
+| 1x <McItem slug="techreborn:silver_ore"/> | 2x <McItem slug="techreborn:raw_silver"/> |
+| 1x <McItem slug="techreborn:tin_ore"/> | 2x <McItem slug="techreborn:raw_tin"/> |
 | 1x <McItem slug="minecraft:charcoal"/> | 1x <McItem slug="techreborn:charcoal_dust"/> |
 | 1x <McItem slug="minecraft:obsidian"/> | 4x <McItem slug="techreborn:obsidian_dust"/> |
 | 1x <McItem slug="minecraft:andesite"/> | 2x <McItem slug="techreborn:andesite_dust"/> |
@@ -48,7 +59,6 @@ Main usage of **Grinder** is to grind materials.
 | 1x <McItem slug="minecraft:quartz_block"/> | 4x <McItem slug="techreborn:quartz_dust"/> |
 | 1x <McItem slug="minecraft:white_wool"/> | 4x <McItem slug="minecraft:string"/> |
 
----
 
 Used as an ingredient in the
 
