--- a/docs/blocks/machines/industrial_grinder.mdx
+++ b/docs/blocks/machines/industrial_grinder.mdx
@@ -31,6 +31,8 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
 
 **Industrial Grinder** has the following elements on its GUI:
 
+![GUI](/img/blocks/guiindustrialgrinder.png)
+
 1. Four slots for upgrades  
 2. Energy indicator. Click on it to switch energy display between EU and FE  
 3. Input slot for cells (for draining or filling)  
