--- a/docs/blocks/machines/launchpad.mdx
+++ b/docs/blocks/machines/launchpad.mdx
@@ -4,4 +4,12 @@ title: Launchpad
 
 <ItemImage file="launchpad" alt="Launchpad" size="200" />
 
-Machines are used for a wide variety of
+The **Launchpad** will launch entities, both living and item into air.
+
+## Recipe
+
+<CraftingTable recipe="input techreborn:magnalium_plate techreborn:magnalium_plate techreborn:magnalium_plate input techreborn:advanced_circuit minecraft:piston techreborn:advanced_circuit input techreborn:zinc_plate techreborn:advanced_machine_frame techreborn:zinc_plate output techreborn:launchpad" />
+
+## Usage
+
+Place it in the world and supply with power. 
