--- a/docs/blocks/machines/machines.mdx
+++ b/docs/blocks/machines/machines.mdx
@@ -11,6 +11,8 @@ Tech Reborn has several tiers of different kind of machines:
 
 - <McItem slug="techreborn:iron_alloy_furnace"/>
 - <McItem slug="techreborn:iron_furnace"/>
+- <McItem slug="techreborn:resin_basin"/>
+- <McItem slug="techreborn:drain"/>
 
 ## Low Tier
 
