--- a/docs/blocks/machines/solid_canning_machine.mdx
+++ b/docs/blocks/machines/solid_canning_machine.mdx
@@ -2,16 +2,27 @@
 title: Solid Canning Machine
 ---
 
-<ItemImage file="solid_canning_machine" alt="Solid Canning Machine" size="200" />
+<ItemImage
+  file="solid_canning_machine"
+  alt="Solid Canning Machine"
+  size="200"
+/>
 
-# Solid Canning Machine
+The **Solid Canning Machine** is used to make different cells.
 
-The **Solid Canning Machine** is used to make <McItem slug="techreborn:biofuel_cell" inline={true}/> and <McItem slug="techreborn:sulfur_cell" inline={true}/> cells.
+| Tier | Input  | Power Draw | Storage |
+| ---- | ------ | ---------- | ------- |
+| Low  | 32 E/t | 1 E/t      | 1 kE    |
 
-| Tier | Input   | Power Draw | Storage |
-|------|---------|------------|---------|
-| Low  | 32 E/t  | 1 E/t      | 1 kE    |
-
-### Recipe
+## Recipe
 
 <CraftingTable recipe="input techreborn:tin_ingot techreborn:electronic_circuit techreborn:tin_ingot input techreborn:tin_ingot techreborn:basic_machine_frame techreborn:tin_ingot input techreborn:tin_ingot techreborn:tin_ingot techreborn:tin_ingot output techreborn:solid_canning_machine" />
+
+## Usage
+
+| Input A                                           | Input B                                  | Output(s)                                            |
+| ------------------------------------------------- | ---------------------------------------- | ---------------------------------------------------- |
+| <McItem slug="techreborn:compressed_plantball" /> | <McItem slug="techreborn:empty_cell" />  | <McItem slug="techreborn:biofuel_cell" />            |
+| <McItem slug="techreborn:helium_cell" />          | 2x<McItem slug="techreborn:tin_ingot" /> | <McItem slug="techreborn:helium_coolant_cell_60k" /> |
+| <McItem slug="techreborn:water_cell" />           | 2x<McItem slug="techreborn:tin_ingot" /> | <McItem slug="techreborn:water_coolant_cell_10k" />  |
+| <McItem slug="techreborn:sulfur_dust" />          | <McItem slug="techreborn:empty_cell" />  | <McItem slug="techreborn:sulfur_cell" />             |
