--- a/docs/blocks/machines/industrial_electrolyzer.mdx
+++ b/docs/blocks/machines/industrial_electrolyzer.mdx
@@ -2,23 +2,58 @@
 title: Industrial Electrolyzer
 ---
 
-<ItemImage file="industrial_electrolyzer" alt="Industrial Electrolyzer" size="200" />
+<ItemImage
+  file="industrial_electrolyzer"
+  alt="Industrial Electrolyzer"
+  size="200"
+/>
 
-# Industrial Electrolyzer
-
-**Industrial Electrolyzer** is used to produce <img src="/img/mods/techreborn/lava_cell.png" alt="lava_cell.png"/> **[Fluids](/items/fluid)** and <img src="/img/mods/techreborn/copper_dust.png" alt="copper_dust.png"/> **[Dusts](/items/dust)** from different items. It has an input rate of 512 FE/tick and internal buffer of 4000 FE.
+**Industrial Electrolyzer** is used to produce **[Fluids](/docs/items/fluids)** and **[Dusts](/docs/items/dusts)** from different items. It has an input rate of 512 FE/tick and internal buffer of 4000 FE.
 
 ## Recipe
 
-<CraftingTable recipe="input techreborn:iron_plate techreborn:extractor techreborn:iron_plate input techreborn:advanced_circuit techreborn:advanced_machine_frame techreborn:advanced_circuit input techreborn:iron_plate techreborn:extractor techreborn:iron_plate output techreborn:industrial_electrolyzer"/>
+<CraftingTable recipe="input techreborn:iron_plate techreborn:extractor techreborn:iron_plate input techreborn:advanced_circuit techreborn:advanced_machine_frame techreborn:advanced_circuit input techreborn:iron_plate techreborn:extractor techreborn:iron_plate output techreborn:industrial_electrolyzer" />
 
 ## Usage
 
-| Input(s)                                                                                          | Output(s)                                                                                                                |
-|----------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------|
-| <McItem slug="techreborn:water_cell" inline={true}/>                                               | <McItem slug="techreborn:electrolyzed_water_cell" inline={true}/>                                                       |
-| 20x <McItem slug="techreborn:Uvarovite_Dust" inline={true}/> + 11x <McItem slug="techreborn:Empty_Cell" inline={true}/> | 3x <McItem slug="techreborn:Calcium_Cell" inline={true}/> + 2x <McItem slug="techreborn:chrome_Dust" inline={true}/> + 3x <McItem slug="techreborn:Silicon_Cell" inline={true}/> + 6x <McItem slug="techreborn:Compressed_Air_Cell" inline={true}/> |
-| 5x <McItem slug="techreborn:Sulfuric_Acid_Cell" inline={true}/>                                   | 2x <McItem slug="techreborn:Hydrogen_Cell" inline={true}/> + <McItem slug="techreborn:Sulfur_Cell" inline={true}/> + 2x <McItem slug="techreborn:Compressed_Air_Cell" inline={true}/> |
-| 32x <McItem slug="minecraft:Sugar" inline={true}/> + 7x <McItem slug="techreborn:Empty_Cell" inline={true}/> | 2x <McItem slug="techreborn:Carbon_Cell" inline={true}/> + 5x <McItem slug="techreborn:Water_Cell" inline={true}/>       |
-| 2x <McItem slug="techreborn:Sphalerite_Dust" inline={true}/>                                      | <McItem slug="techreborn:Zinc_Dust" inline={true}/> + <McItem slug="techreborn:Sulfur_Dust" inline={true}/>              |
-| 20x <McItem slug="techreborn:Spessartine_Dust" inline={true}/> + 9x <McItem slug="techreborn:Empty_Cell" inline={true}/> | 2x <McItem slug="techreborn:Aluminum_Dust" inline={true}/> + 3x <McItem slug="techreborn:Manganese_Dust" inline={true}/> + 3x <McItem slug="techreborn:Silicon_Cell" inline={true}/> + 6x <McItem slug="techreborn:Compressed_Air_Cell" inline={true}/> |
+| Input(s)                                                                                       | Output(s)                                                                                                                                                                                                 |
+| ---------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <McItem slug="techreborn:water_cell" />                                                        | <McItem slug="techreborn:electrolyzed_water_cell" />                                                                                                                                                      |
+| 20x <McItem slug="techreborn:uvarovite_dust" /> + 12x <McItem slug="techreborn:empty_cell" />  | 3x <McItem slug="techreborn:calcium_cell" /> + 2x <McItem slug="techreborn:chrome_dust" /> + 3x <McItem slug="techreborn:silicon_cell" /> + 6x <McItem slug="techreborn:compressed_air_cell" />           |
+| 5x <McItem slug="techreborn:sulfuric_acid_cell" />                                             | 2x <McItem slug="techreborn:hydrogen_cell" /> + <McItem slug="techreborn:sulfur_cell" /> + 2x <McItem slug="techreborn:compressed_air_cell" />                                                            |
+| 32x <McItem slug="minecraft:sugar" /> + 7x <McItem slug="techreborn:empty_cell" />             | 2x <McItem slug="techreborn:carbon_cell" /> + 5x <McItem slug="techreborn:water_cell" />                                                                                                                  |
+| 2x <McItem slug="techreborn:sphalerite_dust" />                                                | <McItem slug="techreborn:zinc_dust" /> + <McItem slug="techreborn:sulfur_dust" />                                                                                                                         |
+| 20x <McItem slug="techreborn:spessartine_dust" /> + 9x <McItem slug="techreborn:empty_cell" /> | 2x <McItem slug="techreborn:aluminum_dust" /> + 3x <McItem slug="techreborn:manganese_dust" /> + 3x <McItem slug="techreborn:silicon_cell" /> + 6x <McItem slug="techreborn:compressed_air_cell" />       |
+| 23x<McItem slug="techreborn:sodalite_dust"/> + 8x<McItem slug="techreborn:empty_cell"/>        | 4x<McItem slug="techreborn:sodium_cell"/> + 3x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:silicon_cell"/> + <McItem slug="techreborn:chlorite_cell"/>                          |
+| 8x<McItem slug="techreborn:sapphire_dust"/> + 3x<McItem slug="techreborn:empty_cell"/>         | 2x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:compressed_air_cell"/>                                                                                                           |
+| 16x<McItem slug="minecraft:sand"/> + 2x<McItem slug="techreborn:empty_cell"/>                  | <McItem slug="techreborn:silicon_cell"/> + <McItem slug="techreborn:compressed_air_cell"/>                                                                                                                |
+| 10x<McItem slug="techreborn:saltpeter_dust"/> + 7x<McItem slug="techreborn:empty_cell"/>       | 2x<McItem slug="techreborn:potassium_cell"/> + 2x<McItem slug="techreborn:nitrogen_cell"/> + 3x<McItem slug="techreborn:compressed_air_cell"/>                                                            |
+| 3x<McItem slug="techreborn:ruby_dust"/> + 3x<McItem slug="techreborn:empty_cell"/>             | 2x<McItem slug="techreborn:aluminum_dust"/> + <McItem slug="techreborn:chrome_dust"/> + 3x<McItem slug="techreborn:compressed_air_cell"/>                                                                 |
+| <McItem slug="techreborn:raw_tungsten"/> + <McItem slug="techreborn:empty_cell"/>              | <McItem slug="techreborn:wolframium_cell"/>                                                                                                                                                               |
+| 20x<McItem slug="techreborn:pyrope_dust"/> + 9x<McItem slug="techreborn:empty_cell"/>          | 3x<McItem slug="techreborn:magnesium_dust"/> + 2x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:silicon_cell"/> + 6x<McItem slug="techreborn:compressed_air_cell"/>               |
+| 3x<McItem slug="techreborn:pyrite_dust"/>                                                      | <McItem slug="minecraft:raw_Iron"/> + 2x<McItem slug="techreborn:sulfur_dust"/>                                                                                                                           |
+| 9x<McItem slug="techreborn:peridot_dust"/> + 3x<McItem slug="techreborn:empty_cell"/>          | 2x<McItem slug="techreborn:magnesium_dust"/> + 2x<McItem slug="minecraft:raw_Iron"/> + <McItem slug="techreborn:silicon_cell"/> + 2x<McItem slug="techreborn:compressed_air_cell"/>                       |
+| 4x<McItem slug="techreborn:obsidian_dust"/> + 3x<McItem slug="techreborn:empty_cell"/>         | 2x<McItem slug="techreborn:small_pile_of_magnesium_dust"/> + 5x<McItem slug="techreborn:iron_nugget"/> + <McItem slug="techreborn:silicon_cell"/> + 2x<McItem slug="techreborn:compressed_air_cell"/>     |
+| 5x<McItem slug="techreborn:methane_cell"/>                                                     | 4x<McItem slug="techreborn:hydrogen_cell"/> + <McItem slug="techreborn:carbon_cell"/>                                                                                                                     |
+| 29x<McItem slug="techreborn:lazurite_dust"/> + 10x<McItem slug="techreborn:empty_cell"/>       | 3x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:silicon_cell"/> + 3x<McItem slug="techreborn:calcium_cell"/> + 4x<McItem slug="techreborn:sodium_cell"/>                         |
+| 20x<McItem slug="techreborn:grossular_dust"/> + 12x<McItem slug="techreborn:empty_cell"/>      | 3x<McItem slug="techreborn:calcium_cell"/> + 2x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:silicon_cell"/> + 6x<McItem slug="techreborn:compressed_air_cell"/>                 |
+| 2x<McItem slug="techreborn:galena_dust"/>                                                      | 6x<McItem slug="techreborn:silver_nugget"/> + 6x<McItem slug="techreborn:lead_nugget"/> + 2x<McItem slug="techreborn:small_pile_of_sulfur_dust"/>                                                         |
+| 8x<McItem slug="techreborn:flint_dust"/> + 2x<McItem slug="techreborn:empty_cell"/>            | <McItem slug="techreborn:silicon_cell"/> + <McItem slug="techreborn:compressed_air_cell"/>                                                                                                                |
+| 16x<McItem slug="techreborn:ender_pearl_dust"/> + 16x<McItem slug="techreborn:empty_cell"/>    | 5x<McItem slug="techreborn:nitrogen_cell"/> + <McItem slug="techreborn:beryllium_cell"/> + 4x<McItem slug="techreborn:potassium_cell"/> + 6x<McItem slug="techreborn:chlorite_cell"/>                     |
+| 29x<McItem slug="techreborn:emerald_dust"/> + 16x<McItem slug="techreborn:empty_cell"/>        | 2x<McItem slug="techreborn:aluminium_dust"/> + 3x<McItem slug="techreborn:beryllium_cell"/> + 6x<McItem slug="techreborn:silicon_cell"/> + 7x<McItem slug="techreborn:compressed_air_cell"/>              |
+| 5x<McItem slug="techreborn:electrolyzed_water_cell"/>                                          | 4x<McItem slug="techreborn:hydrogen_cell"/> + <McItem slug="techreborn:compressed_air_cell"/>                                                                                                             |
+| <McItem slug="techreborn:coal_dust"/> + 2x<McItem slug="techreborn:empty_cell"/>               | 2x<McItem slug="techreborn:carbon_cell"/>                                                                                                                                                                 |
+| 8x<McItem slug="techreborn:clay_dust"/> + 5x<McItem slug="techreborn:empty_cell"/>             | <McItem slug="techreborn:lithium_cell"/> + 2x<McItem slug="techreborn:silicon_cell"/> + 2x<McItem slug="techreborn:sodium_cell"/> + 2x<McItem slug="techreborn:aluminum_dust"/>                           |
+| 2x<McItem slug="techreborn:cinnabar_dust"/> + <McItem slug="techreborn:empty_cell"/>           | <McItem slug="techreborn:mercury_cell"/> + <McItem slug="techreborn:sulfur_dust"/>                                                                                                                        |
+| <McItem slug="techreborn:charcoal_dust"/> + <McItem slug="techreborn:empty_cell"/>             | <McItem slug="techreborn:carbon_cell"/>                                                                                                                                                                   |
+| 10x<McItem slug="techreborn:calcite_dust"/> + 7x<McItem slug="techreborn:empty_cell"/>         | 2x<McItem slug="techreborn:calcium_cell"/> + 2x<McItem slug="techreborn:carbon_cell"/> + 3x<McItem slug="techreborn:compressed_air_cell"/>                                                                |
+| 3x <McItem slug="minecraft:bonemeal"/> + <McItem slug="techreborn:empty_cell"/>                | <McItem slug="techreborn:calcium_cell"/>                                                                                                                                                                  |
+| 4x<McItem slug="minecraft:blaze_powder"/>                                                      | <McItem slug="techreborn:dark_ashes"/> + <McItem slug="techreborn:sulfur_dust"/>                                                                                                                          |
+| 12x<McItem slug="techreborn:bauxite_dust"/> + 8x<McItem slug="techreborn:empty_cell"/>         | 8x<McItem slug="techreborn:aluminum_dust"/> + 2x<McItem slug="techreborn:small_pile_of_titanium_dust"/> + 5x<McItem slug="techreborn:hydrogen_cell"/> + 3x<McItem slug="techreborn:compressed_air_cell"/> |
+| 2x<McItem slug="techreborn:ashes"/> + <McItem slug="techreborn:empty_cell"/>                   | <McItem slug="techreborn:carbon_fiber_cell"/>                                                                                                                                                             |
+| 20x<McItem slug="techreborn:andradite_dust"/> + 12x<McItem slug="techreborn:empty_cell"/>      | 3x<McItem slug="techreborn:calcium_cell"/> + 2x<McItem slug="minecraft:raw_Iron"/> + 3x<McItem slug="techreborn:silicon_cell"/> + 6x<McItem slug="techreborn:compressed_air_cell"/>                       |
+| 20x<McItem slug="techreborn:almandine_dust"/> + 9x<McItem slug="techreborn:empty_cell"/>       | 3x<McItem slug="minecraft:raw_iron"/> + 2x<McItem slug="techreborn:aluminum_dust"/> + 3x<McItem slug="techreborn:silicon_cell"/> + 6x<McItem slug="techreborn:compressed_air_cell"/>                      |
+
+## Page History
+
+- Updated for 1.19 version (added usages)
