--- a/docs/blocks/machines/matter_fabricator.mdx
+++ b/docs/blocks/machines/matter_fabricator.mdx
@@ -6,7 +6,7 @@ title: Matter Fabricator
 
 # Matter Fabricator
 
-The **Matter Fabricator** is used to produce <img src="/img/mods/techreborn/uu-matter.png" alt="UU-Matter" width="32"/> <McItem slug="techreborn:uu_matter" inline={true}/> which in turn can be used to craft various vanilla items. The **Matter Fabricator** belongs in the extreme power tier, has an input rate of 16,384 FE/tick and an internal buffer of 400,000,000 FE.
+The **Matter Fabricator** is used to produce <McItem slug="techreborn:uu_matter" /> which in turn can be used to craft various vanilla items. The **Matter Fabricator** belongs in the extreme power tier, has an input rate of 16,384 FE/tick and an internal buffer of 400,000,000 FE.
 
 Both <McItem slug="techreborn:scrap" inline={true}/> and <McItem slug="techreborn:scrap_box" inline={true}/> can be used in the **Matter Fabricator**.  
 The first one will give you 2% on the progress bar for producing a single piece of <McItem slug="techreborn:uu_matter" inline={true}/> which means that to produce 1x <McItem slug="techreborn:uu_matter" inline={true}/>, you will need 50x <McItem slug="techreborn:scrap" inline={true}/>.
